# Lem_in

./: CMakeLists.txt  Makefile  a.out  clear_ways.c  fill_graph.c  fill_graph1.c  fill_struct.c  fill_struct1.c  fill_struct2.c  fill_struct3.c  free_struct.c  ft_strjoin.c  get_next_line.c  lem_in.c  lem_in.h  libft.h  push_ants.c  sosunok  suroc  tests
libft/: ft_memdel.c  ft_printf.c  ft_printf.h  ft_strjoin.c  get_next_line.c  get_next_line.h  libft.h
